--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./data/chatbot
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.datasource.schema=classpath:sql/schema.sql
 spring.datasource.initialization-mode=always
+spring.jpa.generate-ddl=true
 spring.h2.console.enabled=true
