--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.password=password
 spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
 spring.h2.console.enabled=true
+
+spring.session.store-type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+server.servlet.session.timeout=600
