--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
 spring.h2.console.enabled=true
 
-spring.session.store-type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-server.servlet.session.timeout=600
+#spring.session.store-type=redis
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#server.servlet.session.timeout=600
