--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=password
 spring.datasource.initialization-mode=always
 spring.jpa.generate-ddl=true
 spring.h2.console.enabled=true
+
+server.servlet.session.timeout=5m
